--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 
 
 <html>
-<title>Yo!</title>
-<p>Hello Everyone</p>
+<title>Hi!</title>
+<p>Thanks for dropping by... I am developing this site. Come back later...</p>
 </html>
